# connectwise-project-reports

./: .gitignore  CHANGELOG.md  README.md  project_config.json  pyproject.toml  requirements.txt  run.py  setup.py
.github/workflows/: lint.yml  test.yml
ai_orchestration/: orchestrator.py
backend/: __init__.py  main.py  requirements.txt
backend/aggregation/: aggregator.py
backend/ai/: detailed_analyzer.py
backend/analysis/: __init__.py  ai_analyzer.py  detailed_analyzer.py  project_analyzer.py
backend/config/: project_config.py
backend/connectwise/: __init__.py  api.py  client.py  models.py
backend/scripts/: analyze_project.py  analyze_projects.py  collect_detailed_data.py  collect_sample_data.py  run_analysis_pipeline.py
backend/tests/: requirements-test.txt
backend/tests/models/: __init__.py  (+1 more)
backend/visualization/: app.py  requirements.txt
data/ai_analysis/: analysis_3899_20250211.json  analysis_4216_20250212.json  project_4122_ai_analysis.json  project_4156_ai_analysis.json  project_4216_ai_analysis-gpt-4o-min.json
data/analysis/: project_3899_analysis.json  project_4122_analysis.json  project_4156_analysis.json  project_4216_analysis.json
data/detailed/: project_3899_detailed.json  project_4122_detailed.json  project_4156_detailed.json  project_4216_detailed.json
docs/: api_endpoints.md  connectwise_setup.md  implementation_notes.md  planning.md  project_analysis.md  project_structure.md  roadmap.md  testing_guide.md  testing_plan.md
frontend/: streamlit_app.py
frontend/ai-dashboard/: package-lock.json  package.json  tailwind.config.js
(+25 files in other folders)
