[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "connectwise-project-reports"
version = "0.1.0"
description = "ConnectWise Project Reporting System"
authors = [
    {name = "Dave Wilson", email = "dave@it360.co.nz"}
]
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = [
    ".",
    "backend"
]
asyncio_mode = "strict"
testpaths = [
    "backend/tests"
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short" 